--- a/.github/workflows/deloy.yml
+++ b/.github/workflows/deloy.yml
@@ -33,7 +33,8 @@ jobs:
               run: |
                   git sparse-checkout init --cone  # 初始化 sparse-checkout
                   echo "Blog/*" >> .git/info/sparse-checkout
-                  ls ./blog/source/_posts/
+                  pwd
+                  ls /blog/source/_posts
               working-directory: ./blog/source/_posts
 
             # 设置 Node.js 环境
