--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
-  "cssTheme": "Obsidian Nord",
+  "cssTheme": "Underwater",
   "accentColor": "#beaa60",
-  "baseFontSize": 22,
+  "baseFontSize": 20,
   "enabledCssSnippets": [
     "custom-admonitions.1b78cc",
     "a",
